k8s/invoice-service-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-service-v2
  template:
    metadata:
      labels:
        app: invoice-service-v2
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: invoice-service-v2
          image: ghcr.io/marcelphilippeandrade/invoice-service-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
