k8s/invoice-service-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: invoice-service-v2-ingress

spec:
  rules:
    - host: invoice-service-v2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invoice-service-v2
                port:
                  number: 80
